make keepalived virtual_route_id configurable

--- a/haproxy/keepalived.conf
+++ b/haproxy/keepalived.conf
@@ -15,7 +15,7 @@ vrrp_script chk_haproxy {
 vrrp_instance VI_1 {
     state {{ state }}
     interface {{ if }}
-    virtual_router_id 55
+    virtual_router_id {{ virtual_router_id }}
     priority {{ priority }} 
     advert_int 1
     authentication {
