--- a/harbor/keepalived.conf
+++ b/harbor/keepalived.conf
@@ -26,7 +26,7 @@ vrrp_script chk_harbor {
 vrrp_instance VI_POSTGRESQL {
     state BACKUP
     interface {{ if }}
-    virtual_router_id 56
+    virtual_router_id {{ pgsql_virtual_router_id }}
     priority {{ priority }} 
     advert_int 1
     nopreempt
@@ -47,7 +47,7 @@ vrrp_instance VI_POSTGRESQL {
 vrrp_instance VI_HARBOR {
     state BACKUP
     interface {{ if }}
-    virtual_router_id 60
+    virtual_router_id {{ harbor_virtual_router_id }}
     priority {{ priority }} 
     advert_int 1
     nopreempt
