--- a/playbook/network/flannel_etcd_config.yaml
+++ b/playbook/network/flannel_etcd_config.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Flannel etcd Config 
-  shell: echo "alias etcdctl2='etcdctl --endpoint=https://127.0.0.1:2379 --ca-file=/etc/kubernetes/ssl/ca.pem  --cert-file=/etc/kubernetes/ssl/kubernetes.pem --key-file=/etc/kubernetes/ssl/kubernetes-key.pem'" >> /root/.bashrc
+  shell: echo "alias etcdctl2='export ETCDCTL_API=2 && etcdctl --endpoint=https://127.0.0.1:2379 --ca-file=/etc/kubernetes/ssl/ca.pem  --cert-file=/etc/kubernetes/ssl/kubernetes.pem --key-file=/etc/kubernetes/ssl/kubernetes-key.pem'" >> /root/.bashrc
 
 - name: Flannel etcd Config Check
   shell: etcdctl --endpoint=https://127.0.0.1:2379 --ca-file=/etc/kubernetes/ssl/ca.pem  --cert-file=/etc/kubernetes/ssl/kubernetes.pem --key-file=/etc/kubernetes/ssl/kubernetes-key.pem  ls /kube-centos/network
