--- a/playbook/network/flannel_install.yaml
+++ b/playbook/network/flannel_install.yaml
@@ -32,8 +32,8 @@
 
 - import_tasks: ./cni_install.yaml
 
-- name: CNI Confifg File
-  template: src=../network/cni/flannel/99-loopback.conf.template dest=/etc/cni/net.d/99-loopback.conf
+  #- name: CNI Confifg File
+  #  template: src=../network/cni/flannel/99-loopback.conf.template dest=/etc/cni/net.d/99-loopback.conf
 
 - name: CNI Confifg File With PortMap(HostPort)
   template: src=../network/cni/flannel/12-flannel.conflist.template dest=/etc/cni/net.d/12-flannel.conflist
