--- a/playbook/network/macvlan_install.yaml
+++ b/playbook/network/macvlan_install.yaml
@@ -1,8 +1,8 @@
 ---
 - import_tasks: ./cni_install.yaml
 
-- name: CNI Confifg File
-  template: src=../network/cni/macvlan/99-loopback.conf.template dest=/etc/cni/net.d/99-loopback.conf
+  #- name: CNI Confifg File
+  #  template: src=../network/cni/macvlan/99-loopback.conf.template dest=/etc/cni/net.d/99-loopback.conf
 
 - name: CNI Confifg File
   template: src=../network/cni/macvlan/host-local/{{ inventory_hostname }} dest=/etc/cni/net.d/10-macvlan.conf
