--- a/playbook/node_run.yaml
+++ b/playbook/node_run.yaml
@@ -26,8 +26,14 @@
   #install docker 
   #- import_tasks: ./docker.yaml
   
+  #install docker-ce
+- import_tasks: ./docker-ce.yaml
+  when: cri == 'docker-ce'
+
   #install containerd 
 - import_tasks: ./containerd.yaml
+  when: cri == 'containerd'
+
 
 - name: Disable selinux
   shell: setenforce 0
@@ -56,8 +62,18 @@
 
 - name: Register Kubelet To System Service
   copy: src=../k8s-config/kubelet.service dest=/usr/lib/systemd/system/ force=true
+  when: cri == 'containerd'
 - name: Kubelet Config 
   template: src=../k8s-config/kubelet.template dest=/etc/kubernetes/kubelet
+  when: cri == 'containerd'
+
+- name: Register Kubelet To System Service
+  copy: src=../k8s-config/kubelet_docker_ce.service dest=/usr/lib/systemd/system/kubelet.service force=true
+  when: cri == 'docker-ce'
+- name: Kubelet Config 
+  template: src=../k8s-config/kubelet_docker_ce.template dest=/etc/kubernetes/kubelet
+  when: cri == 'docker-ce'
+
 - name: Kube Common Config 
   template: src=../k8s-config/config.template dest=/etc/kubernetes/config
 
