--- a/wocloud-ipam/wocloud-ipam-controller.yaml
+++ b/wocloud-ipam/wocloud-ipam-controller.yaml
@@ -1,4 +1,24 @@
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    k8s-app: wocloud-ipam-controller
+    scheduler.alpha.kubernetes.io/critical-pod: ""
+  name: wocloud-ipam-controller
+  namespace: kube-system
+spec:
+  ports:
+  - port: 9000
+    protocol: TCP
+    targetPort: 9000
+  selector:
+    k8s-app: wocloud-ipam-controller
+  clusterIP: {{ service_wocloud_ipam_ip }}
+  sessionAffinity: None
+  type: ClusterIP
+
+---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
