--- a/wocloud-ipam/wocloud-ipam-controller.yaml
+++ b/wocloud-ipam/wocloud-ipam-controller.yaml
@@ -74,8 +74,7 @@ spec:
         k8s-app: wocloud-ipam-controller
     spec:
       nodeSelector:
-        beta.kubernetes.io/os: linux
-      hostNetwork: true
+        kubernetes.io/role: master
       tolerations:
         # Mark the pod as a critical add-on for rescheduling.
         - key: CriticalAddonsOnly
