--- a/cluster-config/wocloud-ipam-scheduler-clusterrole.yaml
+++ b/cluster-config/wocloud-ipam-scheduler-clusterrole.yaml
@@ -75,6 +75,14 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - apps
   - extensions
   resources:
