--- a/k8s-config/wocloud-ipam-scheduler.template
+++ b/k8s-config/wocloud-ipam-scheduler.template
@@ -4,4 +4,4 @@
 # default config should be adequate
 
 # Add your own!
-KUBE_SCHEDULER_ARGS="--leader-elect=true --address=127.0.0.1 --kubeconfig=/etc/kubernetes/kube-scheduler.kubeconfig --ipam-address={{ service_wocloud_ipam_ip }}"
+KUBE_SCHEDULER_ARGS="--leader-elect=true --address=127.0.0.1 --kubeconfig=/etc/kubernetes/kube-scheduler.kubeconfig --ipam-address={{ service_wocloud_ipam_ip }}:9000"
