--- a/prometheus/prometheus-k8s.yaml
+++ b/prometheus/prometheus-k8s.yaml
@@ -15,6 +15,7 @@ metadata:
     prometheus: k8s
 spec:
   replicas: {{ prometheus_replicas }}
+  baseImage: {{ base_image_addr }}/prometheus
   version: PROMETHEUS_VERSION
   externalUrl: PROMETHEUS_EXTERNAL_URL
   serviceAccountName: prometheus-k8s
@@ -53,6 +54,25 @@ spec:
         resources:
           requests:
             storage: PROMETHEUS_STORAGE_VOLUME_SIZE
+  containers:
+  - name: prometheus-config-reloader
+    image: {{ base_image_addr }}/prometheus-config-reloader:v0.29.0
+    resources:
+      limits:
+        cpu: 500m
+        memory: 200Mi
+      requests:
+        cpu: 50m
+        memory: 50Mi
+  - name: rules-configmap-reloader
+    image: {{ base_image_addr }}/configmap-reload:v0.0.1
+    resources:
+      limits:
+        cpu: 1000m
+        memory: 300Mi
+      requests:
+        cpu: 50m
+        memory: 50Mi
   alerting:
     alertmanagers:
     - namespace: CUSTOM_NAMESPACE
