--- a/addon-yaml/coredns.yaml
+++ b/addon-yaml/coredns.yaml
@@ -104,10 +104,10 @@ spec:
             weight: 100
       serviceAccountName: coredns
       tolerations:
-        - key: "CriticalAddonsOnly"
-          operator: "Exists"
-        - effect: NoSchedule
-          key: node-role.kubernetes.io/master
+      - key: "CriticalAddonsOnly"
+        operator: "Exists"
+      - effect: NoSchedule
+        key: MasterOnly
       nodeSelector:
         kubernetes.io/role: master
       priorityClassName: system-cluster-critical
